[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/audio/382735__schots__gun-shot.wav" type="AudioStream" id=1]
[ext_resource path="res://entities/Sounds/base_sfx.gd" type="Script" id=2]

[node name="Blaster" type="AudioStreamPlayer"]
stream = ExtResource( 1 )
volume_db = -17.152
pitch_scale = 0.78
autoplay = true
script = ExtResource( 2 )

[connection signal="finished" from="." to="." method="_on_Blaster_finished"]
