[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/audio/zapsplat_cartoon_frog_jump_26526.wav" type="AudioStream" id=1]
[ext_resource path="res://entities/Sounds/base_sfx.gd" type="Script" id=2]

[node name="Jump" type="AudioStreamPlayer"]
stream = ExtResource( 1 )
autoplay = true
script = ExtResource( 2 )

[connection signal="finished" from="." to="." method="_on_Jump_finished"]
